SFUSA/force-app/main/default/objects/CampaignToProgramTranspose__c/fields/ChannelType__c.field-meta.xml
<CustomField>
        <fullName>ChannelType__c</fullName>
        <label>Channel Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>