SFUSA/force-app/main/default/objects/CampaignToProgramTranspose__c/fields/GL_Description__c.field-meta.xml
<CustomField>
        <fullName>GL_Description__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>GL Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>