SFUSA/force-app/main/default/objects/CampaignToProgramTranspose__c/fields/ProgrammingType__c.field-meta.xml
<CustomField>
        <fullName>ProgrammingType__c</fullName>
        <description>Programming Type</description>
        <label>Programming Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>